--- a/test-output/index.html
+++ b/test-output/index.html
@@ -214,16 +214,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
 data.setCell(0, 2, 'starter.testRunner.CucumberTestSuite')
-data.setCell(0, 3, 881);
+data.setCell(0, 3, 2338);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'feature')
 data.setCell(1, 2, 'starter.testRunner.CucumberTestSuite')
-data.setCell(1, 3, 15);
+data.setCell(1, 3, 9);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 896 ms</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -256,15 +256,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">feature("", "Modifier l'adresse d'un abonné")</span>
-                <span class="method-start">187 ms</span>
+                <span class="method-start">281 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">feature("", "Modifier l'adresse d'un abonné")</span>
-                <span class="method-start">1068 ms</span>
+                <span class="method-start">2635 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">1083 ms</span>
+                <span class="method-start">2646 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
